--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-<<<<<<< HEAD
-        <activity android:name=".ListagemPestadorActivity">
-=======
         <activity android:name=".ListagemPrestadorActivity">
->>>>>>> 85992f134eddf6d8c9df3bd5e327155b063e4fe3
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChatActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
