--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
 
-        <activity android:name=".ListagemPrestadorActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name="ListagemPrestadorActivity"/>
+        <activity android:name=".PerfilPrestadorActivity"/>
+        <activity android:name=".ChatActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
