Correção tela de chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-
-        <activity android:name="ListagemPrestadorActivity"/>
-        <activity android:name=".PerfilPrestadorActivity"/>
-        <activity android:name=".ChatActivity"
+        <activity android:name=".Login"></activity>
+        <activity android:name=".ListagemPrestadorActivity" />
+        <activity android:name=".PerfilPrestadorActivity" />
+        <activity
+            android:name=".ChatActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
