XML cadastro e cadastro2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-        <activity android:name=".Cadastro"></activity>
+        <activity android:name=".Cadastro2"></activity>
+        <activity android:name=".Cadastro" />
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,7 @@
         <activity android:name=".ListagemPrestadorActivity" />
         <activity
             android:name=".PerfilPrestadorActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".MainActivity" />
     </application>
