definindo variaveis pro histórico de chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.bauen.mainactivit">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-        <activity android:name=".ChatActivity"></activity>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Cadastro2"/>
+        <activity android:name=".Cadastro" />
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".ListagemPrestadorActivity"/>
+        <activity android:name=".PerfilPrestadorActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatActivity"/>
+        <activity android:name=".MainActivity"/>
+
     </application>
 
 </manifest>
