--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,3 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+compileKotlin {
+    kotlinOptions {
+        languageVersion = "1.4"
+    }
+}
