--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,31 @@
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-        <activity android:name=".MensagensRecentesActivity"/>
+
+        <activity android:name=".MensagensRecentesActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
+
         <activity android:name=".Cadastro2" />
         <activity android:name=".Cadastro" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ListagemPrestadorActivity" />
         <activity android:name=".ChatActivity" />
 
+
+        <meta-data android:name="android.support.PARENT_ACTIVITY"
+            android:value=".ChatActivity"/>
+
         <activity
             android:name=".PerfilPrestadorActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
-
 
     </application>
 
