Ajustes no cadastro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,16 @@
 
         <activity android:name=".Cadastro2"/>
         <activity android:name=".Cadastro" />
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".ListagemPrestadorActivity"/>
-        <activity android:name=".PerfilPrestadorActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ListagemPrestadorActivity"/>
+        <activity android:name=".PerfilPrestadorActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         </activity>
         <activity android:name=".ChatActivity"/>
         <activity android:name=".MainActivity"/>
