--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
 
-        <activity android:name=".MensagensRecentesActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-
-            </intent-filter>
-        </activity>
+        <activity android:name=".MensagensRecentesActivity"/>
 
         <activity android:name=".Cadastro2" />
         <activity android:name=".Cadastro" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".ListagemPrestadorActivity" />
-        <activity android:name=".ChatActivity" />
-
-
-        <meta-data android:name="android.support.PARENT_ACTIVITY"
-            android:value=".ChatActivity"/>
 
         <activity
             android:name=".PerfilPrestadorActivity"
@@ -37,6 +25,14 @@
 
         </activity>
 
+        <activity android:name=".ChatActivityLog">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
