--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,35 +2,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.bauen.mainactivit">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/profile"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.MainActivit">
-
-        <activity android:name=".CadastroCliente"/>
-        <activity android:name=".CadastroPrestadorDeServico" />
-        <activity android:name=".ListagemPrestadorActivity"/>
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        <activity android:name=".LoginActivity">
+        <activity android:name=".ultis.DialogCadastro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PerfilPrestadorActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".CadastroCliente" />
+        <activity android:name=".CadastroPrestadorDeServico" />
+        <activity android:name=".ListagemPrestadorActivity" />
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
-        <activity android:name=".ChatActivity"/>
-        <activity android:name=".MainActivity"/>
-
+        <activity
+            android:name=".PerfilPrestadorActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
