--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,10 +52,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-//**** dependencias paea acessar a api
+//**** dependencias para acessar a api
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.4'
+
     //***chat
     implementation ('io.socket:socket.io-client:2.0.0'){
         exclude group: 'org.json', module: 'json'
