--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,19 @@
         android:roundIcon="@drawable/ic_launcher_foreground"
         android:supportsRtl="true"
         android:theme="@style/Theme.MainActivit">
-        <activity android:name=".ultis.DialogCadastro">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".CadastroCliente" />
         <activity android:name=".CadastroPrestadorDeServico" />
-        <activity android:name=".ListagemPrestadorActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".ListagemPrestadorActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".PerfilPrestadorActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".LoginActivity"/>
+        <activity android:name=".PerfilPrestadorActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".MainActivity" />
     </application>
