--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,17 @@
         </activity>
         <activity android:name=".CadastroCliente" />
         <activity android:name=".CadastroPrestadorDeServico" />
-        <activity android:name=".ListagemPrestadorActivity"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".PerfilPrestadorActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".ListagemPrestadorActivity" />
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".PerfilPrestadorActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
         </activity>
         <activity android:name=".ChatActivity" />
         <activity android:name=".MainActivity" />
